Fix table on mobile

--- a/styles/Index.module.scss
+++ b/styles/Index.module.scss
@@ -76,6 +76,9 @@ $breakpoints: (
 }
 
 .resultsTable {
+  display: block;
+  overflow-x: auto;
+  white-space: nowrap;
   margin-bottom: 40px;
 }
 
